--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^8.0.1",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
+    "styled-normalize": "^8.0.7",
     "typescript": "^4.6.0",
     "web-vitals": "^2.1.0"
   },
