--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@types/node": "^17.0.25",
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
+    "qs": "^6.10.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
+    "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
     "styled-normalize": "^8.0.7",
@@ -82,6 +84,7 @@
     "lint-staged": "^12.4.2",
     "prettier": "^2.6.2",
     "prop-types": "^15.8.1",
+    "storybook-addon-react-router-v6": "^0.1.7",
     "storybook-addon-styled-component-theme": "^2.0.0",
     "webpack": "^5.72.1"
   },
