--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-redux": "^8.0.1",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "react-window": "^1.8.7",
+    "react-window-scroller": "^1.0.10",
     "styled-components": "^5.3.5",
     "styled-normalize": "^8.0.7",
     "typescript": "^4.6.0",
@@ -70,6 +72,7 @@
     "@storybook/node-logger": "^6.5.5",
     "@storybook/preset-create-react-app": "^4.1.1",
     "@storybook/react": "^6.5.5",
+    "@types/react-window": "^1.8.5",
     "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
