--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "qs": "^6.10.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-markdown": "^8.0.3",
     "react-redux": "^8.0.1",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
