--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "5.0.1",
     "react-window": "^1.8.7",
     "react-window-scroller": "^1.0.10",
+    "rehype-raw": "^6.1.1",
     "styled-components": "^5.3.5",
     "styled-normalize": "^8.0.7",
     "typescript": "^4.6.0",
