--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@storybook/node-logger": "^6.5.5",
     "@storybook/preset-create-react-app": "^4.1.1",
     "@storybook/react": "^6.5.5",
+    "@testing-library/react-hooks": "^8.0.0",
     "@types/react-virtualized-auto-sizer": "^1.0.1",
     "@types/react-window": "^1.8.5",
     "@types/styled-components": "^5.1.25",
@@ -91,8 +92,10 @@
     "gh-pages": "^4.0.0",
     "husky": "^8.0.1",
     "lint-staged": "^12.4.2",
+    "msw": "^0.42.1",
     "prettier": "^2.6.2",
     "prop-types": "^15.8.1",
+    "react-test-renderer": "^18.1.0",
     "storybook-addon-react-router-v6": "^0.1.7",
     "storybook-addon-styled-component-theme": "^2.0.0",
     "webpack": "^5.72.1"
